--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2423,7 +2423,7 @@
                         <label>Signature Type</label>
                         <select id="meta-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
-                            <option value="SecAct">SecAct (top 50 by effect)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -11405,14 +11405,11 @@
             };
             const label = analysisLabels[analysisType] || { title: 'Replicated Associations', desc: 'correlation' };
             document.getElementById('meta-forest-title').textContent = label.title;
+            document.getElementById('meta-description').textContent = `Shows signatures with ${label.desc} data from multiple atlases (CIMA + Inflammation). ${metaData.length} signatures available.`;
 
-            // Limit display: show all for CytoSig, top 50 for SecAct
-            const displayLimit = sigType === 'SecAct' ? 50 : metaData.length;
-            const limitNote = sigType === 'SecAct' ? ` Showing top ${Math.min(displayLimit, metaData.length)} of ${metaData.length} by effect size.` : '';
-            document.getElementById('meta-description').textContent = `Shows signatures with ${label.desc} data from multiple atlases (CIMA + Inflammation).${limitNote}`;
-
-            // Sort by absolute pooled effect for visualization
-            const sortedMeta = [...metaData].sort((a, b) => Math.abs(b.pooled.effect) - Math.abs(a.pooled.effect)).slice(0, displayLimit);
+            // Sort by absolute pooled effect for forest plot (limit to top 20 for readability)
+            const forestLimit = 20;
+            const sortedMeta = [...metaData].sort((a, b) => Math.abs(b.pooled.effect) - Math.abs(a.pooled.effect)).slice(0, forestLimit);
 
             // 1. Forest plot
             if (container1) {
@@ -11494,13 +11491,15 @@
                 }, { responsive: true });
             }
 
-            // 2. Heterogeneity bar chart (I² statistics)
+            // 2. Heterogeneity bar chart (I² statistics) - limit to top 50
             if (container2) {
                 container2.classList.remove('loading');
                 Plotly.purge(container2);
 
-                // Use same filtered data as forest plot
-                const sortedByI2 = [...metaData].sort((a, b) => b.I2 - a.I2);
+                // Sort by I² and limit to top 50 for display
+                const heterogeneityLimit = 50;
+                const allSortedByI2 = [...metaData].sort((a, b) => b.I2 - a.I2);
+                const sortedByI2 = allSortedByI2.slice(0, heterogeneityLimit);
 
                 if (sortedByI2.length === 0) {
                     container2.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">No data available.</p>';
@@ -11508,7 +11507,7 @@
                 }
 
                 // Check if all I² values are 0 (perfectly consistent)
-                const allZero = sortedByI2.every(d => d.I2 === 0);
+                const allZero = allSortedByI2.every(d => d.I2 === 0);
 
                 if (allZero) {
                     container2.innerHTML = `
@@ -11516,7 +11515,7 @@
                             <div style="font-size: 3rem; color: #2ca02c; margin-bottom: 1rem;">I² = 0%</div>
                             <p><strong>Perfect Consistency</strong></p>
                             <p style="font-size: 0.9rem; margin-top: 1rem;">
-                                All ${sortedByI2.length} replicated signatures show <span style="color: #2ca02c; font-weight: bold;">identical effects</span>
+                                All ${allSortedByI2.length} replicated signatures show <span style="color: #2ca02c; font-weight: bold;">identical effects</span>
                                 across CIMA and Inflammation Atlas.
                             </p>
                             <p style="font-size: 0.85rem; margin-top: 0.5rem; color: #999;">
@@ -11527,7 +11526,15 @@
                     return;
                 }
 
-                Plotly.newPlot(container2, [{
+                // Show limit note if truncated
+                const limitNote = allSortedByI2.length > heterogeneityLimit
+                    ? `<p style="text-align: center; font-size: 0.8rem; color: #666; margin-bottom: 0.5rem;">Showing top ${heterogeneityLimit} of ${allSortedByI2.length} signatures by I² (highest heterogeneity first)</p>`
+                    : '';
+
+                container2.innerHTML = limitNote + '<div id="meta-heterogeneity-chart"></div>';
+                const chartDiv = document.getElementById('meta-heterogeneity-chart');
+
+                Plotly.newPlot(chartDiv, [{
                     type: 'bar',
                     orientation: 'h',
                     y: sortedByI2.map(d => d.signature),
@@ -11546,7 +11553,7 @@
                 }], {
                     xaxis: { title: 'I² Heterogeneity (%)', range: [0, 100] },
                     yaxis: { automargin: true },
-                    margin: { l: 80, r: 30, t: 30, b: 50 },
+                    margin: { l: 80, r: 30, t: 10, b: 50 },
                     shapes: [
                         { type: 'line', x0: 25, y0: -0.5, x1: 25, y1: sortedByI2.length - 0.5, line: { dash: 'dot', color: '#999' } },
                         { type: 'line', x0: 50, y0: -0.5, x1: 50, y1: sortedByI2.length - 0.5, line: { dash: 'dot', color: '#999' } },
