--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2195,7 +2195,6 @@
                 <button class="tab" data-tab="atlas-comparison">Atlas Comparison</button>
                 <button class="tab" data-tab="conserved-signatures">Conserved</button>
                 <button class="tab" data-tab="meta-analysis">Meta-Analysis</button>
-                <button class="tab" data-tab="signature-correlation">Signature Matrix</button>
                 <button class="tab" data-tab="pathway-enrichment">Pathways</button>
             </div>
 
@@ -2486,52 +2485,6 @@
                 </div>
             </div>
 
-            <!-- Signature Correlation Matrix Tab -->
-            <div class="tab-content" id="tab-signature-correlation">
-                <div class="controls">
-                    <div class="control-group">
-                        <label>Signature Type</label>
-                        <select id="sigcorr-sig-type">
-                            <option value="CytoSig">CytoSig (43 cytokines)</option>
-                            <option value="SecAct">SecAct (1,170 proteins)</option>
-                        </select>
-                    </div>
-                    <div class="control-group">
-                        <label>Correlation Method</label>
-                        <select id="sigcorr-method">
-                            <option value="spearman">Spearman</option>
-                            <option value="pearson">Pearson</option>
-                        </select>
-                    </div>
-                    <div class="control-group">
-                        <label>Atlas</label>
-                        <select id="sigcorr-atlas">
-                            <option value="all">All Atlases Combined</option>
-                            <option value="cima">CIMA (Healthy)</option>
-                            <option value="inflammation">Inflammation (Disease)</option>
-                            <option value="scatlas">scAtlas (Tissues)</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="card" style="margin-bottom: 1rem; padding: 1rem;">
-                    <strong>Signature Correlation Matrix:</strong> Reveals co-regulated cytokine programs. Clusters of highly correlated cytokines may share upstream regulators or functional pathways.
-                </div>
-
-                <div class="two-col">
-                    <div class="viz-container large">
-                        <div class="viz-title">Cytokine Correlation Matrix</div>
-                        <div class="viz-subtitle">Pairwise correlations across samples (hierarchically clustered)</div>
-                        <div id="sigcorr-matrix" class="loading">Loading...</div>
-                    </div>
-                    <div class="viz-container">
-                        <div class="viz-title">Correlation Modules</div>
-                        <div class="viz-subtitle">Identified cytokine clusters</div>
-                        <div id="sigcorr-modules" class="loading">Loading...</div>
-                    </div>
-                </div>
-            </div>
-
             <!-- Pathway Enrichment Tab -->
             <div class="tab-content" id="tab-pathway-enrichment">
                 <div class="controls">
@@ -2646,9 +2599,6 @@
                 <li>I² 50-75%: Substantial heterogeneity</li>
                 <li>I² &gt; 75%: Considerable heterogeneity (effects vary across atlases)</li>
             </ul>
-
-            <h4>Signature Correlation Matrix</h4>
-            <p>Pairwise Spearman correlations between cytokine activities were computed across all samples. Hierarchical clustering (Ward's method) was applied to identify co-regulated cytokine modules.</p>
 
             <h4>Pathway Enrichment</h4>
             <p>Cytokine-pathway associations were derived from KEGG, Reactome, and MSigDB Hallmark databases. Over-representation was tested using Fisher's exact test with Benjamini-Hochberg correction (FDR &lt; 0.05).</p>
@@ -7199,7 +7149,6 @@
                         // Cross-Atlas: redraw charts that need visible container
                         if (sectionId === 'cross-atlas') {
                             if (tabId === 'celltype-mapping') updateCelltypeMapping();
-                            if (tabId === 'signature-correlation') updateSignatureCorrelation();
                         }
                         // Resize any Plotly charts in the newly visible tab
                         const activeTab = document.getElementById('tab-' + tabId);
@@ -11587,109 +11536,8 @@
         }
 
         // ========================================
-        // NEW CROSS-ATLAS PANELS: Signature Correlation, Pathway Enrichment
+        // CROSS-ATLAS PANELS: Pathway Enrichment
         // ========================================
-
-        // Cross-Atlas: Signature Correlation Matrix
-        // Shows pairwise correlations between signatures across all atlases
-        // CytoSig: 43 signatures, SecAct: top 200 most variable signatures
-        function updateSignatureCorrelation() {
-            const matrixContainer = document.getElementById('sigcorr-matrix');
-            const modulesContainer = document.getElementById('sigcorr-modules');
-
-            if (!matrixContainer) return;
-
-            // Get dropdown values
-            const sigType = document.getElementById('sigcorr-sig-type')?.value || 'CytoSig';
-            const method = document.getElementById('sigcorr-method')?.value || 'spearman';
-            const atlasFilter = document.getElementById('sigcorr-atlas')?.value || 'all';
-
-            // Use real correlation data based on signature type
-            const corrData = state.data.crossatlas?.correlation;
-            let signatures, corrMatrix, modules, nSamples;
-
-            // Select data based on sigType
-            const typeKey = sigType === 'SecAct' ? 'secact' : 'cytosig';
-            const typeData = corrData?.[typeKey];
-
-            if (typeData && typeData.matrix && typeData.signatures) {
-                signatures = typeData.signatures;
-                corrMatrix = typeData.matrix;
-                modules = typeData.modules || [];
-                nSamples = typeData.n_samples || 0;
-            } else if (corrData && corrData.matrix && corrData.signatures) {
-                // Backward compatibility: use root-level data
-                signatures = corrData.signatures;
-                corrMatrix = corrData.matrix;
-                modules = corrData.modules || [];
-                nSamples = 0;
-            } else {
-                // Fallback if no data
-                matrixContainer.innerHTML = `<p style="text-align:center; color:#666; padding:2rem;">No ${sigType} correlation data available.</p>`;
-                if (modulesContainer) {
-                    modulesContainer.innerHTML = '';
-                }
-                return;
-            }
-
-            // 1. Correlation heatmap
-            matrixContainer.classList.remove('loading');
-            Plotly.purge(matrixContainer);
-
-            const nSigs = signatures.length;
-            const title = sigType === 'SecAct'
-                ? `SecAct Correlation (${nSigs} top variable signatures)`
-                : `CytoSig Correlation (${nSigs} signatures)`;
-
-            Plotly.newPlot(matrixContainer, [{
-                type: 'heatmap',
-                z: corrMatrix,
-                x: signatures,
-                y: signatures,
-                colorscale: [[0, '#2166ac'], [0.5, '#f7f7f7'], [1, '#b2182b']],
-                zmid: 0,
-                zmin: -1,
-                zmax: 1,
-                colorbar: { title: 'Spearman ρ', len: 0.8 },
-                hovertemplate: '<b>%{x} vs %{y}</b><br>r = %{z:.3f}<extra></extra>'
-            }], {
-                title: { text: title, font: { size: 14 } },
-                margin: { l: 100, r: 50, t: 50, b: 100 },
-                xaxis: { tickangle: 45, tickfont: { size: nSigs > 50 ? 6 : 10 } },
-                yaxis: { tickfont: { size: nSigs > 50 ? 6 : 10 } },
-                height: 550
-            }, { responsive: true });
-
-            // 2. Modules summary
-            if (modulesContainer) {
-                modulesContainer.classList.remove('loading');
-
-                let html = `<div style="padding: 1rem;">
-                    <h4 style="margin-top: 0;">Identified Co-regulation Modules</h4>
-                    <p style="color: #666; font-size: 0.85rem; margin-bottom: 1rem;">
-                        ${modules.length} modules identified from ${nSigs} signatures (${nSamples.toLocaleString()} samples across atlases)
-                    </p>`;
-
-                modules.forEach(mod => {
-                    const memberList = mod.members.length > 10
-                        ? mod.members.slice(0, 10).join(', ') + ` ... (+${mod.members.length - 10} more)`
-                        : mod.members.join(', ');
-                    const meanCorr = mod.mean_correlation !== undefined
-                        ? ` (mean r=${mod.mean_correlation.toFixed(2)})`
-                        : '';
-
-                    html += `<div style="margin-bottom: 0.8rem;">
-                        <span class="badge" style="background: ${mod.color || '#999'}; color: white; font-size: 0.75rem;">
-                            ${mod.name.toUpperCase()}${meanCorr}
-                        </span>
-                        <span style="margin-left: 0.5rem; font-size: 0.85rem; color: #555;">${memberList}</span>
-                    </div>`;
-                });
-
-                html += '<p style="color: #888; font-size: 0.8rem; margin-top: 1rem; font-style: italic;">Modules identified by hierarchical clustering (Ward linkage) on cross-atlas activity data.</p></div>';
-                modulesContainer.innerHTML = html;
-            }
-        }
 
         // Cross-Atlas: Pathway Enrichment
         function updatePathwayEnrichment() {
@@ -12139,11 +11987,6 @@
             document.getElementById('meta-analysis-type')?.addEventListener('change', updateMetaAnalysis);
             document.getElementById('meta-sig-type')?.addEventListener('change', () => { clearMetaSearch(); });
             document.getElementById('meta-search')?.addEventListener('input', updateMetaAnalysis);
-
-            // Cross-Atlas Signature Correlation
-            document.getElementById('sigcorr-sig-type')?.addEventListener('change', updateSignatureCorrelation);
-            document.getElementById('sigcorr-method')?.addEventListener('change', updateSignatureCorrelation);
-            document.getElementById('sigcorr-atlas')?.addEventListener('change', updateSignatureCorrelation);
 
             // Cross-Atlas Pathway Enrichment
             document.getElementById('pathway-db')?.addEventListener('change', updatePathwayEnrichment);
