Add SecAct citation and standardize reference format
- Add Ru et al. (2026) citation for SecAct in Methods section
- Standardize all references to 'Author et al.' format for consistency

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2552,7 +2552,7 @@
             <p>Cytokine signaling activities were inferred from single-cell RNA-seq data using two complementary approaches:</p>
             <ul>
                 <li><strong>CytoSig</strong>: Predicts activities of 44 cytokines based on their downstream transcriptional signatures (Jiang et al., 2021).</li>
-                <li><strong>SecAct</strong>: Estimates activities of 1,249 secreted proteins using secreted protein signatures learned from spatial Moran's I autocorrelation.</li>
+                <li><strong>SecAct</strong>: Estimates activities of 1,249 secreted proteins using secreted protein signatures learned from spatial Moran's I autocorrelation (Ru et al., 2026).</li>
             </ul>
             <p>Activity scores represent z-scored coefficients from ridge regression of signature gene expression, where positive values indicate upregulation of downstream targets.</p>
 
@@ -2659,11 +2659,11 @@
 
             <h3>References</h3>
             <ul>
-                <li>Ru B, Gong L, Yang E, Park S, Zaki G, Aldape K, Wakefield L, Jiang P. (2026) <em>Nature Methods</em> (in press) - Inference of secreted protein activities in intercellular communication</li>
-                <li>Jiang P, et al. (2021) <em>Nature Methods</em> - Systematic investigation of cytokine signaling activity at the tissue and single-cell levels</li>
-                <li>Hao Y, et al. (2021) <em>Cell</em> - Integrated analysis of multimodal single-cell data</li>
-                <li>Higgins JPT, et al. (2003) <em>BMJ</em> - Measuring inconsistency in meta-analyses</li>
-                <li>Domínguez Conde C, et al. (2022) <em>Science</em> - Cross-tissue immune cell analysis reveals tissue-specific features in humans</li>
+                <li>Ru et al. (2026) <em>Nature Methods</em> (in press) - Inference of secreted protein activities in intercellular communication</li>
+                <li>Jiang et al. (2021) <em>Nature Methods</em> - Systematic investigation of cytokine signaling activity at the tissue and single-cell levels</li>
+                <li>Hao et al. (2021) <em>Cell</em> - Integrated analysis of multimodal single-cell data</li>
+                <li>Higgins et al. (2003) <em>BMJ</em> - Measuring inconsistency in meta-analyses</li>
+                <li>Domínguez Conde et al. (2022) <em>Science</em> - Cross-tissue immune cell analysis reveals tissue-specific features in humans</li>
             </ul>
         </div>
     </section>
