Improve gene detail page with per-organ activity and CytoSig-only detection
- Add CytoSig-only signature detection (11 signatures like IL2, IL4, IL17A
  that are in CytoSig but not SecAct) with explanatory UI messaging
- Show scAtlas activity per organ instead of aggregated across organs
- Fix heatmap colorscale: Blue (low) → White (0) → Red (high)
- Handle h5ad files with different gene name formats (categorical columns)
- Support n=1-2 samples in boxplots by returning points for scatter display
- Include all cell types in scatlas_celltypes.json (not just top 100)
- Fix cell type column names for Inflammation (Level2) and scAtlas (cellType2)
- Add z-score option to target gene expression computation
- Remove validation JSON files from git tracking (now in .gitignore)

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -12677,7 +12677,7 @@
 
             const sigLabel = selectedSig === 'all' ? `All ${sigType} Signatures` : selectedSig;
             Plotly.newPlot(scatterDiv, traces, {
-                xaxis: { title: 'Target Gene Expression (log1p CPM)' },
+                xaxis: { title: 'Target Gene Expression (z-score)' },
                 yaxis: { title: 'Predicted Activity (z-score)' },
                 margin: { l: 60, r: 30, t: 50, b: 50 },
                 legend: { orientation: 'v', x: 1.02, y: 1, font: { size: 9 } },
