Add 5-panel Compare menu for cross-atlas comparison
Backend:
- Add 5 new endpoints to cross_atlas router (summary, celltype-sankey,
  pairwise-scatter, signature-reliability, meta-analysis/forest)
- Add corresponding service methods with caching in cross_atlas_service

Frontend:
- Restructure compare.js with 5-tab system (Overview, Cell Type Mapping,
  Atlas Comparison, Conserved Signatures, Meta-Analysis)
- Add dynamic atlas selector with automatic pair generation
- Add new Sankey chart component for cell type mapping visualization
- Add Forest plot component for meta-analysis with heterogeneity chart

Features:
- Overview tab: Summary stats, bar charts, atlas details table
- Cell Type Mapping: Sankey diagram with coarse/fine level toggle
- Atlas Comparison: Pairwise scatter plots with per-cell-type correlations
- Conserved Signatures: Reliability heatmap with searchable table
- Meta-Analysis: Forest plot with I² heterogeneity visualization

API additions:
- GET /cross-atlas/summary
- GET /cross-atlas/celltype-sankey
- GET /cross-atlas/pairwise-scatter
- GET /cross-atlas/signature-reliability
- GET /cross-atlas/meta-analysis/forest

--- a/cytoatlas-api/static/index.html
+++ b/cytoatlas-api/static/index.html
@@ -259,14 +259,7 @@
 
     <template id="compare-template">
         <div class="page compare-page">
-            <div class="page-header">
-                <h1>Cross-Atlas Comparison</h1>
-                <p>Compare cytokine activities across different atlases and cohorts</p>
-            </div>
-
-            <div class="compare-content" id="compare-content">
-                <!-- Comparison panels will be loaded -->
-            </div>
+            <!-- Compare page is fully rendered by compare.js -->
         </div>
     </template>
 
@@ -338,6 +331,8 @@
     <script src="/static/js/components/scatter.js"></script>
     <script src="/static/js/components/chat-viz.js"></script>
     <script src="/static/js/components/chat-widget.js"></script>
+    <script src="/static/js/components/sankey.js"></script>
+    <script src="/static/js/components/forest-plot.js"></script>
     <script src="/static/js/pages/home.js"></script>
     <script src="/static/js/pages/explore.js"></script>
     <script src="/static/js/pages/atlas-detail.js"></script>
